--- a/Site/index.html
+++ b/Site/index.html
@@ -26,7 +26,7 @@
         expedita eum placeat quae, in aliquam laborum neque! Distinctio aut, labore magni inventore
         sequi nemo consectetur.</p>
     <h2>CSS</h2>
-    <img src="img/css.jpeg" alt="CSS">
+    <img src="img/logo_new.png" alt="CSS">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quis, sit dolore quo,
         nam repellat ipsa dolorem quisquam voluptates consequuntur tempore fugit harum, beatae
         aspernatur consectetur nostrum. Modi, ratione sint?</p>
